fix SpotBugs suggestions